--- a/Moteling.DATA/Moteling.DATA.csproj
+++ b/Moteling.DATA/Moteling.DATA.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.0" />
+    <PackageReference Include="PagedList.Core.Mvc" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
