--- a/Moteling.API/appsettings.json
+++ b/Moteling.API/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Moteling;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "Logging": {
         "IncludeScopes": false,
