List all motels WEB Project

--- a/Moteling.WEB/Moteling.WEB.csproj
+++ b/Moteling.WEB/Moteling.WEB.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
@@ -32,6 +32,10 @@
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="1.0.0" />
     <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="1.0.0" />
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Moteling.API\Moteling.API.csproj" />
+    <ProjectReference Include="..\Moteling.DATA\Moteling.DATA.csproj" />
   </ItemGroup>
 
 </Project>
