--- a/Moteling.API/Moteling.API.csproj
+++ b/Moteling.API/Moteling.API.csproj
@@ -26,5 +26,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Moteling.DATA\Moteling.DATA.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
