--- a/Moteling.WEB/Moteling.WEB.csproj
+++ b/Moteling.WEB/Moteling.WEB.csproj
@@ -12,6 +12,7 @@
     <UserSecretsId>aspnet-Moteling.WEB-ddbc6453-5e18-4ec8-8544-30335ea19b6e</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="6.0.2" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="1.1.2" />
