Adding Basic Indexx to Motel Controller

--- a/Moteling.WEB/Moteling.WEB.csproj
+++ b/Moteling.WEB/Moteling.WEB.csproj
@@ -37,6 +37,9 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Moteling.DATA\Moteling.DATA.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="nlog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
