--- a/Moteling.WEB/appsettings.json
+++ b/Moteling.WEB/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Moteling.WEB-a07ab708-eb82-4279-be7b-5ca38957bf2c;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Moteling.WEB-a07ab708-eb82-4279-be7b-5ca38957bf2c;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MotelingConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Moteling;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
